src/emit/emitter/snapshots/hebi__emit__emitter__tests__call-5.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
f(a=0, b=1, c=2)

# Func:
function "code":
  frame_size: 5
  length: 34
  const (length=4):
    0: "a"
    1: "b"
    2: "c"
    3: "f"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | push_small_int value=0
     8 | insert_to_dict_named [0], r4
    11 | push_small_int value=1
    16 | insert_to_dict_named [1], r4
    19 | push_small_int value=2
    24 | insert_to_dict_named [2], r4
    27 | load_global [3]
    29 | call_kw r4, args=0
    32 | ret 
    33 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  
