src/emit/emitter/snapshots/hebi__emit__emitter__tests__class_def-10.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
class T(U):
  v = 0


# Func:
function "code":
  frame_size: 6
  length: 18
  const (length=3):
    0: <class descriptor "T">
    1: "U"
    2: "T"
  code:
     0 | load_global [1]
     2 | store_reg r4
     4 | push_small_int value=0
     9 | store_reg r5
    11 | create_class [0], r4
    14 | store_global [2]
    16 | ret 
    17 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                         ●━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  
