src/emit/emitter/snapshots/hebi__emit__emitter__tests__class_def-4.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
class T:
  a = 0
  b = 1


# Func:
function "code":
  frame_size: 6
  length: 21
  const (length=2):
    0: <class descriptor "T">
    1: "T"
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | push_small_int value=1
    12 | store_reg r5
    14 | create_class [0], r4
    17 | store_global [1]
    19 | ret 
    20 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  
