src/emit/emitter/snapshots/hebi__emit__emitter__tests__class_def-5.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
class T:
  v = 0
  fn test(self):
    print self.v


# Func:
function "test":
  frame_size: 4
  length: 7
  const (length=1):
    0: "v"
  code:
    0 | load_self 
    1 | load_field [0]
    3 | print 
    4 | push_none 
    5 | ret 
    6 | suspend 

function "code":
  frame_size: 6
  length: 18
  const (length=3):
    0: <class descriptor "T">
    1: <func descriptor "test">
    2: "T"
  code:
     0 | create_function [1]
     2 | store_reg r4
     4 | push_small_int value=0
     9 | store_reg r5
    11 | create_class [0], r4
    14 | store_global [2]
    16 | ret 
    17 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  
